--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 }
 
 body {
-  background-color: #fff;
+  background-color: #FEF8FF;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -14,6 +14,17 @@ body {
   margin: 0;
   overflow: hidden;
   font-family: 'Lato', sans-serif;
+}
+
+.card img {
+  width: auto  !important;
+
+}
+#imagePreview {
+  width:100%;
+  height:100%;
+  position: relative;
+  z-index: 1000000;
 }
 
 h1 {
@@ -102,6 +113,7 @@ h1 button {
 .inner-card-back {
   backface-visibility: hidden;
   position: absolute;
+
   top: 0;
   left: 0;
   display: flex;
@@ -110,6 +122,11 @@ h1 button {
   height: 100%;
   width: 100%;
   background: #fff;
+}
+
+.inner-card-back {
+  display:inline-block !important;
+  text-align:center;
 }
 
 .inner-card-front {
