--- a/src/index.css
+++ b/src/index.css
@@ -21,8 +21,8 @@ body {
 
 }
 #imagePreview {
-  width:100%;
-  height:100%;
+  width:50%;
+  height:50%;
   position: relative;
   z-index: 1000000;
 }
@@ -166,6 +166,10 @@ h1 button {
   margin: 0 25px;
 }
 
+.inner-card-back p:first-child {
+  margin-top:70px;
+}
+
 .add-container {
   opacity: 0;
   z-index: -1;
@@ -183,6 +187,9 @@ h1 button {
   transition: 0.3s ease;
 }
 
+#imageUploaded{
+  height:100%;
+}
 .add-container.show {
   opacity: 1;
   z-index: 2;
