--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,4 @@
-@import url('https://fonts.googleapis.com/css?family=Lato:300,500,700&display=swap');
-
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,400;0,700;1,700&display=swap');
 * {
   box-sizing: border-box;
 }
@@ -13,7 +12,7 @@ body {
   height: 100vh;
   margin: 0;
   overflow: hidden;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Noto Sans', sans-serif;
 }
 
 .card img {
